# Baofeng-Logo-Flasher

./: .gitignore  Baofeng_5RM_MASTER.img  CHANGELOG.md  DEVELOPMENT.md  FIXES_APPLIED.md  HANDOFF_NEW_CHAT_PROTOCOL.md  LOGO_PROTOCOL.md  MAIN_APP_PROTOCOL_REFERENCE.md  Makefile  PROJECT_SUMMARY.md  README.md  README.root.backup.md  TROUBLESHOOTING.md  audit.txt  diagnose_bootloader.py  dm32uv_protocol.md  improvements.md  v1migration.md
docs/: IMAGE_LAYOUT.md  UI_BEHAVIOR.md  architecture.md  brick-recovery-5rm.md  contributing.md  dumper-monitor-fixes.md  protocol-spec.md  readme-root-backup.md  user-guide.md
main/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  pyproject.toml  requirements.txt
main/repodocs/: CONFIGURATION.md  INSTALLATION.md  README.md  SAFETY.md
main/src/baofeng_logo_flasher/: bmp_utils.py  boot_logo.py
main/src/baofeng_logo_flasher/core/: __init__.py  results.py  safety.py
main/src/baofeng_logo_flasher/protocol/: __init__.py  logo_protocol.py
main/src/baofeng_logo_flasher/ui/: __init__.py  components.py
main/tests/: __init__.py  test_logo_codec.py
repodocs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  FILE_MAP.md  INSTALLATION.md  README.md  RUNTIME_FLOW.md  SAFETY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
tests/: test_boot_logo_flasher.py  test_boot_logo_image.py  test_cli_parsing.py  test_firmware_tools.py  test_integration_radio_stub.py  test_logo_codec.py  test_logo_protocol.py  test_vendor_protocol.py
tools/: generate_logo_probes.py  inspect_img.py  logo_payload_tools.py  scan_bitmap_candidates.py
v2/: .gitignore
(+93 files in other folders)
